src/App.css
@import url('https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap');

.App {
  text-align: center;
  font-family: 'Open Sans Condensed', sans-serif;
  background-color: #374653;
}

body {
  line-height: 1.8;
  color: #f5f6f7;
}

p {
  font-size: 16px;
}

.bg-1 { 
  color: #ffffff;
}

.bg-2 { 
  background-color: #474e5d; /* Dark Blue */
  color: #ffffff;
}

.bg-3 { 
  background-color: #ffffff; /* White */
  color: #555555;
}

.bg-4 { 
  background-color: #2f2f2f; /* Black Gray */
  color: #fff;
}

.bg-5 {
    background-color: #7a6586; /* Lavender */
    color: #ffffff;
}

.container-fluid {
  padding-top: 25px;
  padding-bottom: 25px;
}

/* Navigation Stuff ******************************************************************************/
.navbar {
  padding-top: 10px;
  padding-bottom: 10px;
  border: 0;
  border-radius: 0;
  margin-bottom: 0;
  font-size: 20px;
  letter-spacing: 5px;
  background-color: lightgray;
}

.navbar-nav li a:hover, .navbar-brand:hover {
  color: #5a2e3e !important;
  font-weight: bold;
  font-size: 23px;
}



/* Header Stuff ************************************************************************************/

.picture {
  float: left; 
  margin: auto;
  margin-left: 50px;
}

.picture svg {
  width: 475px;
  height: 100%;
}

.info h1 {
  font-size: 70px;
  font-weight: bold;
}

.info h3 {
  font-size: 30px;
}

.info p {
  font-size: 25px;
}

.header-text {
  display: inline-block;
  margin-left: 30px;
  padding: 20px;
  width: 60%;
}

.particles {
  background-color: #374653;
  height: 100%;
  width: 100%;
  position: absolute;
}

#header-content {
  position: absolute;
  margin: 100px;
  width: 90%;
}

.header-msg {
  font-size: 220px;
}

.intro {
  text-align: center;
  margin: auto;
  padding: 5px;
  background-color: rgb(211,211,211, 0.6);
}

.intro p {
  font-size: 24px;
}

@media (max-width: 1808px) {  
  .header-msg{
    font-size: 220px
  }

  .picture {
    margin-left: 0px
  }
  
  .intro p {
    font-size: 23px;
  }

}

@media (max-width: 1752px) {
  .picture svg {
    width: 450px;
    height: 100%;
  }

  .header-msg{
    font-size: 200px
  }
}

@media (max-width: 1599px){
  .picture svg {
    width: 400px;
    height: 100%;
  }

}

@media (max-width: 1490px) { 
    .header-msg{
    font-size: 150px
  }

  .intro p {
    font-size: 20px;
  }

  .info h1 {
    font-size: 60px;
  }
}

@media (max-width: 1382px) {
  .picture svg {
    width: 400px;
    height: 100%;
  }
  
  .info h3 {
    font-size: 30px;
  }
  
  .info p {
    font-size: 25px;
  }
}

@media (max-width: 1244px) {
  .header-msg{
    font-size: 125px
  }

  .picture svg {
    width: 350px;
    height: 100%;
  }

  .intro p {
    font-size: 18px;
  }

}

@media (max-width: 1106px) {
  #header-content {
    margin: auto;
    width: 100%;
  }

  .picture svg {
    width: 305px;
    height: 100%;
  }

  .picture {
    margin: 0 auto;
    width: 100%;
  }

  .header-text {
    align-items: center;
    width: 90%;
  }

   .info h1 {
    font-size: 45px;
  }
  
  .info h3 {
    font-size: 25px;
  }
  
  .info p {
    font-size: 20px;
  }

  .intro p {
    margin: auto;
    font-size: 20px;
  }

  .header-msg{
    font-size: 65px;
    width: 50%;
    padding-bottom: 10px;
    margin: auto;
  }
}

@media (max-width: 985px) {
  #header-content {
    margin: auto;
    width: 100%;
  }

  .header-msg{
    font-size: 60px;
    width: 50%;
    padding-bottom: 10px;
    margin: auto;
  }
  
  .header-text {
    margin-left: 0px;
    padding: 0;
    width: 95%;
  }

  .intro p {
    margin: auto;
    font-size: 17px;
  }

}

@media (max-width: 600px) { 
  #header-content {
    margin: auto;
    width: 100%;
  }
  
  .header-msg{
    font-size: 50px;
    width: 50%;
    padding-bottom: 10px;
    margin: auto;
  }

  .picture svg {
    width: 305px;
    height: 100%;
  }

  .info h1 {
    font-size: 40px;
  }
  
  .info h3 {
    font-size: 25px;
  }
  
  .info p {
    font-size: 20px;
  }

  .intro p {
    margin: auto;
    font-size: 15px;
  }
}

@media (max-width: 530px){
  .picture svg {
    width: 280px;
    height: 100%;
  }
}

@media (max-width: 476px){
  .picture svg {
    width: 260px;
    height: 100%;
  }

  .info h1 {
    font-size: 30px;
  }
  
  .info h3 {
    font-size: 20px;
  }
  
  .info p {
    font-size: 17px;
  }

  .header-msg {
    font-size: 40px;
  }
}


/* Page Content ***************************************************************************************/
.item h4{
  font-size: 30px; 
  margin-bottom: 30px;
}


.row {
  color: black;
  font-size: 30px;
}


.hobbies p, .skills p, .text-center {
  font-size: 25px;
}

.story-p {
  display: inline-block;
  width: 70%;
  margin: auto;
}

.story-p p {
  font-size: 23px;
  text-align: justify;
}

h2 {
  font-weight: bold;
  font-size: 40px;
  margin-bottom: 15px;
}

.col-md-4 {
  display: inline-block;
  width: 100%;
  margin: auto;
  color: black;
  text-decoration: none;
}

.col-sm-4 ul li {

  color: black;
  margin-right: 35px;
  text-decoration: none;
}

.col-md-4 p {
  color: black;
  font-size: 25px;
}

.my-story a h1 {
  font-weight: bold;
  font-size: 60px;
}

.row a:link, 
.row a:visited, 
.row a:link, 
.row a:visited{
    color: black;
    text-decoration: none;
}

.row a:hover, 
.row a:hover{
  color: #5a2e3e !important;
  font-weight: bold;
  text-decoration: none;
}

.fun-fact{
  color: #AEE0DC; 
  font-weight: bold;
}

.about-h3 {
  font-size: 50px; 
  text-align: left; 
  margin-left: 50px;
}

.about-content {
  width: 80%; 
  margin: auto; 
  background-color: rgb(211,211,211, 0.6);
  padding: 10px;
}

.about-content p {
  font-size: 25px;
}

.course-buttons a {
  font-size: 40px;
  margin: 30px;
  background-color:#5A2E3E;
  border: none;
}

.course-buttons a:hover{
  background-color:#5A2E3E;
  color: #C5AA74;
  font-weight: bold;
}

.projects button, .projects a {
  color: black;
  background-color: #C5AA74;
  margin: 15px;
  border: none;
  font-size: 20px;
}

.projects button:hover{
  color: #5A2E3E;
  font-weight: bold;
}

.modal-body p {
  font-size: 19px;
  text-align: justify;
}

@media (max-width: 625px) { 
  iframe {
    width: 300px ;
    height: 300px;
  }
}

@media (max-width: 395px) { 
  iframe {
    width: 250px ;
    height: 250px;
  }
}

